# liquidation-bot

./: .cursorrules  .env.example  .env.liquidation-monitor.example  .env.mainnet.example  .gitignore  .gitmodules  BASE_MAINNET_MIGRATION_COMPLETED.md  BEFORE_AFTER_COMPARISON.md  BOOTSTRAP_IMPLEMENTATION_ANALYSIS.md  BOOTSTRAP_STATUS_SUMMARY.md  BUG_FIXES_APPLIED.md  BUG_FIXES_CONSOLIDATED.md  BUG_FIXES_SUMMARY.md  CHANGES_SUMMARY.md  CIRCUIT_BREAKER_FIX_SUMMARY.md  CODEBASE_ANALYSIS_AND_RECOMMENDATIONS.md  CONTRIBUTING.md  Cargo.toml  DYNAMIC_ASSET_IDS_FIX.md  Dockerfile.liquidation-monitor  IMPLEMENTATION_SUMMARY.md  LINTING_SETUP.md  LIQUIDATION_IMPLEMENTATION.md  LIQUIDATION_IMPLEMENTATION_SUCCESS.md  LIQUIDATION_MONITOR_QUICKSTART.md  MAINNET_MIGRATION_SUMMARY.md  MIGRATION_COMPLETION_SUMMARY.md  MIGRATION_INSTRUCTIONS.md  POSTGRES_MIGRATION_SUMMARY.md  PRICE_UPDATE_FIX.md  PRIORITY_LIQUIDATION_IMPLEMENTATION.md  README.md  REFACTORING_SUMMARY.md  SETUP.md  SOLUTION_DEMO.md  assets.json  bug_report.md  bugs-fixed.md  clippy.toml  docker-compose.liquidation-monitor.yml  (+20 more)
.github/workflows/: ci.yml
artifacts/@aave/core-v3/contracts/protocol/libraries/types/DataTypes.sol/: DataTypes.dbg.json  DataTypes.json
artifacts/@openzeppelin/contracts/access/Ownable.sol/: Ownable.dbg.json
artifacts/@openzeppelin/contracts/token/ERC20/IERC20.sol/: IERC20.dbg.json
artifacts/@uniswap/v3-core/contracts/interfaces/callback/IUniswapV3SwapCallback.sol/: IUniswapV3SwapCallback.dbg.json
artifacts/contracts/AaveLiquidator.sol/: AaveLiquidator.dbg.json  AaveLiquidator.json
broadcast/Deploy.s.sol/8453/: run-1752603151.json  run-1752610505.json  run-1752619191.json
contracts/: AaveLiquidator.sol
contracts-foundry/: AaveLiquidator.sol
deployments/: base-sepolia.json  base.json
docs/: ARCHITECTURE.md  CIRCUIT_BREAKER_MIGRATION.md  CONFIGURATION.md  LIQUIDATION_MONITOR.md  LIQUIDATION_STRATEGY.md  POSTGRES_MIGRATION.md  ROADMAP.md  SETUP.md  TESTING.md  circuit_breaker.md  custom_liquidation_strategy_concept.md  liquidation-bot-research.md
examples/: circuit_breaker_demo.rs  run_liquidation_monitor.sh
liquidation-monitor/: .env.example  README.md  index.js  package.json
liquidation-monitor/config/: config.js
liquidation-monitor/utils/: formatters.js  logger.js
script/: Deploy.s.sol
scripts/: check.sh  deploy.js  fix.sh  migrate_to_postgres.rs  test_drpc_connection.sh
src/: bootstrap.rs  bot.rs  circuit_breaker.rs  config.rs  database.rs  events.rs  lib.rs  main.rs  models.rs  oracle.rs  position.rs
src/liquidation/: assets.rs  executor.rs  mod.rs  opportunity.rs  profitability.rs  result.rs
src/monitoring/: discovery.rs  liquidation_config.rs  liquidation_monitor.rs  mod.rs  oracle.rs  scanner.rs  websocket.rs
src/providers/: mod.rs
src/sim/: mod.rs  tenderly.rs
