[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
anyhow = "1"
alloy-provider = { version = "1.0.9", features = ["reqwest"] }
alloy-transport = "1.0.9"
alloy-contract = "1.0.9"
alloy-primitives = "1.0.9"
alloy-json-abi = "1.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy-dyn-abi = "1.2.0"
url = "2"
