[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# Environment and configuration
dotenvy = "0.15"
anyhow = "1"

# Ethereum and Alloy - Using compatible 1.0.x versions
alloy-provider = { version = "1.0", features = ["reqwest", "ws"] }
alloy-transport = "1.0"
alloy-contract = "1.0"
alloy-primitives = "1.0"
alloy-json-abi = "1.0"
alloy-dyn-abi = "1.0"
alloy-sol-types = "1.0"
alloy-rpc-types = "1.0"
alloy-signer = "1.0"
alloy-signer-local = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "sqlite",
  "chrono",
  "uuid",
] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
url = "2"
uuid = { version = "1.0", features = ["serde"] }
futures = "0.3"
dashmap = "5.5"

# Error handling
eyre = "0.6"
thiserror = "1.0"
