[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"
authors = ["Liquidation Bot Team"]
description = "A production-ready Aave v3 liquidation bot for Base network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/liquidation-bot"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Environment and configuration
dotenvy = "0.15"
anyhow = "1"

# Ethereum and Alloy
alloy-provider = { version = "0.5.4", features = ["reqwest", "ws"] }
alloy-transport = "0.5.4"
alloy-contract = "0.5.4"
alloy-primitives = "0.8.14"
alloy-json-abi = "0.8.14"
alloy-dyn-abi = "0.8.14"
alloy-sol-types = "0.8.14"
alloy-rpc-types = "0.5.4"
alloy-signer = "0.5.4"
alloy-signer-local = "0.5.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "postgres",
  "sqlite",
  "chrono",
  "uuid",
  "any",
] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
url = "2"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
dashmap = "5.5"
parking_lot = "0.12"

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Async trait support
async-trait = "0.1"
